version 0.9.0 - XX-MMM-2009
 . All: using CC namespace (issue #520)
 . All: prevents warnings with Static Analizer (issue #613)
 . All: cocos protocols renamed to avoid confusion (part of issue #520)
 . Tests: Performance Tests re-integrated to main XCode project (issue #XXX)
 . BitmapFontAtlas: works with subdirectories (issue #612)
 . Box2d: updated to r23 (pre 2.1.0) (issue #494)
 . CocosLive: Uses CL namespace (part of issue #520)
 . CocosLive: Uses ASCII encoder (issue #617)
 . Sprite: Sprite and AtlasSprite merged in just one class (issue #620)
 . Sprite: AtlasSpriteManager renamed to SpriteSheet (issue #620)
 . Sprite: Sprite Frames and animations supports flipx / flipy (issue #620)
 . SpriteFrameCache: added an easier way to create animations and sprites (issue #620)
 . Templates: updated (part of issue #520 and issue #620)
 . Templates: includes cocos2d and CocosDenshion licences files
 . TextureMgr: renamed to TextureCache (part of issue #620)
 . XCode: textures files in 1 xcode group (Texture2d, PVRTexture, TextureAltas, TextureCache)

version 0.8.2 - 19-Oct-2009
 . Actions: Animate copy restoreOriginalFrame parameter (issue #602)
 . ChipmunkTest: uses new API to set director type (issue #XXX)
 . CocosLive: doesn't use deprecated methods (issue #604)
 . MenuItem: added isSelected property (issue #601)
 . Tests: removed copyrighted fonts (part of issue #596)
 
version 0.8.2-rc1 - 14-Oct-2009
 . Actions: start/stop sets the target (issue #489 and issue #589)
 . Actions: Compound actions call "inner" stop (issue #489 and #issue #589)
 . Actions: Fixed BezierBy reverse. BezierBy doesn't use startPosition (issue #586)
 . Actions: added BezierTo (issue #562)
 . Actions: RotateTo uses min distance (issue #584)
 . Actions: JumpBy/To uses parabolic function (issue #324)
 . BitmapFontAtlas: added limited unicode support (issue #596)
 . Director: Rolling back buffer format. Default buffer format is RGB565.